Change Settings hints

--- a/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
+++ b/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
@@ -4,7 +4,7 @@
     "" : {
 
     },
-    "\nIf you have n8n self-hosted, a normal configuration would be accessed via http://ip-address:port or https://your-domain.\nIf you're using n8n Cloud, the configuration would be accessed through https://appname.app.n8n.cloud\n" : {
+    "\n\nIf you have n8n self-hosted, a normal configuration would be accessed via http://ip-address:port or https://your-domain. It is necessary to grant permission to access your local network.\nIf you're using n8n Cloud, the configuration would be accessed through https://appname.app.n8n.cloud\n\n" : {
 
     },
     "{}" : {
@@ -77,7 +77,7 @@
     "Cannot be empty" : {
 
     },
-    "Create an API key\n1. Log in to n8n.\n2. Go to Settings > n8n API.\n3. Select Create an API key.\n4. Copy My API Key and use this key to authenticate your calls." : {
+    "Create an API key\n1. Log in to n8n.\n2. Go to **Settings > n8n API**.\n3. Select **Create an API key**.\n4. Copy **My API Key** and use this key to authenticate your calls." : {
 
     },
     "Credentials" : {
