--- a/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
+++ b/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
@@ -31,7 +31,7 @@
     "1" : {
 
     },
-    "1. Search for and select the **n8n Workflows** app.\n\n2. And also select the action you want: activate or deactivate workflow." : {
+    "1. Search for and select the **My Workflows Manager** app.\n\n2. And also select the action you want: activate or deactivate workflow." : {
 
     },
     "2" : {
@@ -52,7 +52,7 @@
     "7" : {
 
     },
-    "About n8n" : {
+    "About workflows" : {
 
     },
     "Activate workflow" : {
@@ -138,10 +138,10 @@
     "Loading n8n data..." : {
 
     },
-    "n8n (pronounced n-eight-n) helps you to connect any app with an API with any other, and manipulate its data with little or no code.\n\n- Customizable: highly flexible workflows and the option to build custom nodes.\n- Convenient: use the npm or Docker to try out n8n, or the Cloud hosting option if you want us to handle the infrastructure.\n- Privacy-focused: self-host n8n for privacy and security.\n\nCheck the project at: %@" : {
+    "My Workflows Manager" : {
 
     },
-    "n8n Workflows" : {
+    "n8n (pronounced n-eight-n) helps you to connect any app with an API with any other, and manipulate its data with little or no code.\n\n- Customizable: highly flexible workflows and the option to build custom nodes.\n- Convenient: use the npm or Docker to try out n8n, or the Cloud hosting option if you want us to handle the infrastructure.\n- Privacy-focused: self-host n8n for privacy and security.\n\nCheck the project at: %@" : {
 
     },
     "Name" : {
@@ -217,6 +217,9 @@
 
     },
     "Workflow" : {
+
+    },
+    "Workflows" : {
 
     }
   },
