Add model container to views

--- a/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
+++ b/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
@@ -77,6 +77,12 @@
     "Cannot be empty" : {
 
     },
+    "Configuration" : {
+
+    },
+    "Create" : {
+
+    },
     "Create an API key\n1. Log in to n8n.\n2. Go to **Settings > n8n API**.\n3. Select **Create an API key**.\n4. Copy **My API Key** and use this key to authenticate your calls." : {
 
     },
@@ -138,6 +144,9 @@
     "Loading n8n data..." : {
 
     },
+    "Manage webhook configurations" : {
+
+    },
     "My Workflows Manager" : {
 
     },
@@ -147,10 +156,16 @@
     "Name" : {
 
     },
+    "New" : {
+
+    },
     "Not supported yet" : {
 
     },
     "OK" : {
+
+    },
+    "onDelete" : {
 
     },
     "Open the **Shortcuts** app" : {
