--- a/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
+++ b/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
@@ -71,6 +71,9 @@
     "Authentication" : {
 
     },
+    "Basic Webhook Launcher" : {
+
+    },
     "Cancel" : {
 
     },
@@ -180,6 +183,9 @@
     "Select the **Add Action** button to add the action to the workflow." : {
 
     },
+    "Select webhook from ${workflow}" : {
+
+    },
     "Self-hosted" : {
 
     },
@@ -201,6 +207,9 @@
     "The next step is to configure the action. To do this:\n\n1. Expand the configuration.\n\n2. Choose the workflow you would like to select." : {
 
     },
+    "This action enables you to launch a webhook by selecting a workflow and then choosing the specific webhook you wish to trigger. Remember to ensure that the workflow is activated when executing a webhook." : {
+
+    },
     "Unknown" : {
 
     },
@@ -208,6 +217,9 @@
 
     },
     "Value" : {
+
+    },
+    "Webhook" : {
 
     },
     "Webhook authentication" : {
