--- a/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
+++ b/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
@@ -65,6 +65,9 @@
         }
       }
     },
+    "Advanced Webhook Launcher" : {
+
+    },
     "API-KEY" : {
 
     },
@@ -243,6 +246,9 @@
     "This action enables you to launch a webhook by selecting a workflow and then choosing the specific webhook you wish to trigger. Remember to ensure that the workflow is activated when executing a webhook." : {
 
     },
+    "titled" : {
+
+    },
     "Unknown" : {
 
     },
@@ -261,7 +267,13 @@
     "Webhook authentication" : {
 
     },
+    "Webhook Configuration" : {
+
+    },
     "Webhook request" : {
+
+    },
+    "WebhookConfigurationEntity" : {
 
     },
     "Workflow" : {
