Fix #21 Add ChatView

--- a/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
+++ b/n8n-workflows-ios/Common/Assets/Localizable.xcstrings
@@ -83,6 +83,9 @@
     "Cannot be empty" : {
 
     },
+    "Chat" : {
+
+    },
     "Create an API key\n1. Log in to n8n.\n2. Go to **Settings > n8n API**.\n3. Select **Create an API key**.\n4. Copy **My API Key** and use this key to authenticate your calls." : {
 
     },
